Closed Bug 1880171 Opened 2 years ago Closed 1 year ago

Intermittent Assertion failure: runtime()->gc.foregroundFinalizedArenas.ref().isNothing(), at /builds/worker/checkouts/gecko/js/src/gc/Heap.cpp:238

Categories

(Core :: JavaScript: GC, defect, P5)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jonco)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=447144145&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/IdVqPoBuSfSZCUoCH240fQ/runs/0/artifacts/public/logs/live_backing.log


[task 2024-02-13T21:09:08.799Z] TEST-PASS | js/src/jit-test/tests/gc/bug-1714530.js | Success (code 0, args "") [4.4 s]
[task 2024-02-13T21:09:08.821Z] Assertion failure: runtime()->gc.foregroundFinalizedArenas.ref().isNothing(), at /builds/worker/checkouts/gecko/js/src/gc/Heap.cpp:238
[task 2024-02-13T21:09:08.821Z] #01: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x23d2524]
[task 2024-02-13T21:09:08.821Z] #02: JS::Zone::~Zone()[/builds/worker/workspace/obj-spider/dist/bin/js +0x249c422]
[task 2024-02-13T21:09:08.821Z] #03: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x23ab82a]
[task 2024-02-13T21:09:08.821Z] #04: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x1bc361f]
[task 2024-02-13T21:09:08.821Z] #05: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18d725e]
[task 2024-02-13T21:09:08.821Z] #06: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18ece97]
[task 2024-02-13T21:09:08.821Z] #07: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19ad104]
[task 2024-02-13T21:09:08.821Z] #08: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19ac822]
[task 2024-02-13T21:09:08.821Z] #09: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19adfaa]
[task 2024-02-13T21:09:08.821Z] #10: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19bfdfb]
[task 2024-02-13T21:09:08.821Z] #11: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19ac0e3]
[task 2024-02-13T21:09:08.821Z] #12: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19abc0f]
[task 2024-02-13T21:09:08.821Z] #13: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19af8ac]
[task 2024-02-13T21:09:08.821Z] #14: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19afe8a]
[task 2024-02-13T21:09:08.821Z] #15: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x1b57a88]
[task 2024-02-13T21:09:08.821Z] #16: JS_ExecuteScript(JSContext*, JS::Handle<JSScript*>)[/builds/worker/workspace/obj-spider/dist/bin/js +0x1b57c68]
[task 2024-02-13T21:09:08.821Z] #17: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x191c62c]
[task 2024-02-13T21:09:08.821Z] #18: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x191b6ff]
[task 2024-02-13T21:09:08.821Z] #19: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18b4275]
[task 2024-02-13T21:09:08.821Z] #20: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18ad3b7]
[task 2024-02-13T21:09:08.821Z] Exit code: -11
[task 2024-02-13T21:09:08.821Z] FAIL - gc/bug-1791975.js
[task 2024-02-13T21:09:08.821Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1791975.js | Assertion failure: runtime()->gc.foregroundFinalizedArenas.ref().isNothing(), at /builds/worker/checkouts/gecko/js/src/gc/Heap.cpp:238 (code -11, args "--no-blinterp --no-baseline --no-ion --more-compartments") [0.2 s]
[task 2024-02-13T21:09:08.821Z] INFO exit-status     : -11
[task 2024-02-13T21:09:08.821Z] INFO timed-out       : False
[task 2024-02-13T21:09:08.821Z] INFO stderr         2> Assertion failure: runtime()->gc.foregroundFinalizedArenas.ref().isNothing(), at /builds/worker/checkouts/gecko/js/src/gc/Heap.cpp:238
[task 2024-02-13T21:09:08.821Z] INFO stderr         2> #01: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x23d2524]
[task 2024-02-13T21:09:08.821Z] INFO stderr         2> #02: JS::Zone::~Zone()[/builds/worker/workspace/obj-spider/dist/bin/js +0x249c422]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #03: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x23ab82a]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #04: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x1bc361f]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #05: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18d725e]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #06: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18ece97]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #07: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19ad104]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #08: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19ac822]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #09: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19adfaa]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #10: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19bfdfb]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #11: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19ac0e3]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #12: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19abc0f]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #13: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19af8ac]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #14: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x19afe8a]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #15: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x1b57a88]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #16: JS_ExecuteScript(JSContext*, JS::Handle<JSScript*>)[/builds/worker/workspace/obj-spider/dist/bin/js +0x1b57c68]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #17: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x191c62c]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #18: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x191b6ff]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #19: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18b4275]
[task 2024-02-13T21:09:08.822Z] INFO stderr         2> #20: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x18ad3b7]
[task 2024-02-13T21:09:08.824Z] TEST-PASS | js/src/jit-test/tests/gc/bug-1792338.js | Success (code 0, args "--baseline-eager --write-protect-code=off") [0.1 s]
Component: Networking: HTTP → JavaScript: GC
Flags: needinfo?(jcoppeard)
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Keywords: regression
Regressed by: 1877124

The issue here is that we can delete zones if we hit OOM during zone creation
at which point the GC might also be doing foreground finalization, so the
assertion doesn't hold. This is fine because we won't be finalizing arenas in
this zone at this point.

Instead we can move it to where we are sweeping zones at the end of GC, where
it does hold.

Set release status flags based on info from the regressing bug 1877124

Pushed by csabou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2af34b4c9adf Fix assertion about GC finalization that doesn't hold. r=sfink
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: