Bug 1880171 - Fix assertion about GC finalization that doesn't hold. r=sfink

The issue here is that we can delete zones if we hit OOM during zone creation
at which point the GC might also be doing foreground finalization, so the
assertion doesn't hold. This is fine because we won't be finalizing arenas in
this zone at this point.

Instead we can move it to where we are sweeping zones at the end of GC, where
it does hold.

Differential Revision: https://phabricator.services.mozilla.com/D201984